deployment/base/initContainer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-example-service
spec:
  template:
    spec:
      serviceAccountName: pandora-k8s-pod-dev
