deployment/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-example-service
spec:
  ports:
    - port: 4000
      name: admin
      protocol: TCP
      targetPort: 4000
    - port: 80
      name: main
      protocol: TCP
      targetPort: 3000
    - port: 5000
      name: debug
      protocol: TCP
      targetPort: 5000
  type: ClusterIP
