deployment/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-example-service
spec:
  rules:
    - host: go-service-example.dev.poz-dev.k8s.wikia.net
      http:
        paths:
          - path: /
            backend:
              service:
                name: go-service-example
                port:
                  name: main
    - host: dev.poz-dev.k8s.wikia.net
      http:
        paths:
          - path: /go-service-example
            backend:
              service:
                name: go-service-example
                port:
                  name: main
    - host: go-service-example-admin.poz-dev.k8s.wikia.net
      http:
        paths:
          - path: /
            backend:
              service:
                name: go-service-example
                port:
                  name: admin
    - host: go-service-example-debug.poz-dev.k8s.wikia.net
      http:
        paths:
          - path: /
            backend:
              service:
                name: go-service-example
                port:
                  name: debug
    # for exposing service to the world
    - host: services-k8s.wikia-dev.pl
      http:
        paths:
          - path: /go-service-example
            backend:
              service:
                name: go-service-example
                port:
                  name: main
    - host: services.fandom-dev.pl
      http:
        paths:
          - path: /go-service-example
            backend:
              service:
                name: go-service-example
                port:
                  name: main
